1.10.2
	- Add MGL command 'loadfont' for in-script font changing.
	- Add labelw_ext() and rename Label() to Labelw() for wchar_t argument.
	- Bug with font path reconstraction in win32.
	- Python interface now can use 3D NumPy arrays as initialization of mglData() constructor.

1.10.1 Released 5 March 2010
	- Add "in-place" commands for arguments in a MGL script (like, "plot {sum dat 'x'}").
	- Add StickPlot() for putting plot in to a cell of sticks
	- Add parsing of MGL option arguments.
	- Allow marks drawing in Tens() plot.
	- If text style contain 'a'/'A' then text in absolute subplot/picture coordinates is drawn.
	- Add functions mglGraph::Hist() for converting value from points to grids.
	- Add extra argument for 'box' command.
	- Add ticks (lines) for Colorbar.
	- Add GridPnts for changing number of points in grid lines (for curved coordinates)
	- Colorbar factor now placed at top of a plot.
	- Dots() now don't change transparence for self.
	- Bug with missing ticks tunning in Colorbar is corrected.
	- Bug of double glyph drawing in mglGraphPS is corrected.

1.10 Released 25 December 2009
	- Change license from GPL to LGPL for MathGL core. SWIG-based interfaces still have GPL.
	- Add new plot BoxPlot() for plotting data statistic (max, min, median, quartiles).
	- Add formula for coloring like formulas for curvilinear coordinates.
	- Add C++ wrapper classes for C functions. These classes (mglDataW, mglGraph, mglParse) can be used even in MSVS naturally.
	- Add wxMathGL widget for wxWidgets library.
	- Sufficiently improve documentation.
	- Add speed up compilation (i.e. allow 'make -j3').
	- Add ObjId for determining the object (or line) of picture point.
	- Add ticks drawing for inverted axis (i.e. when Min>Max, not for log-scaled!).
	- Add drawing of log-scaled axis for case Min<Max<0.
	- Several MGL commands can be placed in single string. They have to be separated by column ':'.