@@ -1,6 +1,6 @@
 \input texinfo
 @setfilename mathgl_en.info
-@set VERSION 1.10
+@set VERSION 1.10.1
 @settitle MathGL @value{VERSION}
 @syncodeindex pg cp
 @comment %**end of header
