@@ -2,7 +2,7 @@
 @setfilename mathgl_ru.info
 @c @documentlanguage ru
 @documentencoding UTF-8
-@set VERSION 1.10
+@set VERSION 1.10.1
 @settitle MathGL @value{VERSION}
 @syncodeindex pg cp
 @comment %**end of header
